--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "akkio-node",
+  "name": "akkio",
   "version": "1.0.0",
   "description": "Convenient access to the Akkio API from server-side javascript",
   "main": "index.js",
